[1.0] sfSympalPlugin: Fixed css so design shifts down when edit mode is on so the admin bar can remain at the top.
git-svn-id: http://svn.symfony-project.org/plugins/sfSympalPlugin/trunk@16430 ee427ae8-e902-0410-961c-c3ed070cd9f9

--- a/web/css/editor.css
+++ b/web/css/editor.css
@@ -48,10 +48,14 @@
 
 #sympal_admin_bar_container {
   position: fixed;
-  bottom: 0;
+  top: 0;
   left: 0;
   z-index: 100;
   width: 100%;
+}
+
+body {
+  margin-top: 25px;
 }
 
 div#sympal-icon {
